# textual-mandelbrot

./: .pylintrc  ChangeLog.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
src/textual_mandelbrot/: __init__.py  __main__.py  commands.py  mandelbrot.py
textual_mandelbrot/: __init__.py  __main__.py  colouring.py  commands.py  mandelbrot.py
