[metadata]
name = textual-mandelbrot
description = A simple Mandelbrot explorer for the terminal.
version = attr: textual_mandelbrot.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/textual-mandelbrot
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: MIT License
license_files = LICENCE
keywords = terminal, library, mandelbrot, maths
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Terminals
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/textual-mandelbrot/blob/main/README.md
    Source = https://github.com/davep/textual-mandelbrot
    Issues = https://github.com/davep/textual-mandelbrot/issues
    Discussions = https://github.com/davep/textual-mandelbrot/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    textual>=0.19.1
    textual-canvas
python_requires = >=3.7

[options.package_data]
textual_mandelbrot = py.typed

[options.entry_points]
console_scripts =
    mandelexp = textual_mandelbrot.__main__:main

### setup.cfg ends here
